fix buttons gap - registration

--- a/src/scss/sections/_page-register.scss
+++ b/src/scss/sections/_page-register.scss
@@ -31,6 +31,7 @@
     justify-content: center !important;
     align-items: center !important;
     margin-bottom: 41px !important;
+    margin-top: 0px !important;
 
     &>* {
       margin: 0 13px 10px !important;
